@@ -15,6 +15,7 @@ set(MARVEL_SOURCES
 	"$<$<PLATFORM_ID:Linux>:src/platform/Linux/mvLinuxWindow.cpp>"
 
 	"src/core/mvApp.cpp"
+	"src/core/mvAppItemState.cpp"
 	"src/core/mvAppLog.cpp"
 	"src/core/mvInput.cpp"
 	"src/core/mvWindow.cpp"
